Fixed some warnings